<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="app_name">Jon\'s Movie Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleTextView">placeholder title</string>
    <string name="descriptionTextView">placeholder description</string>
    <string name="playBtn">Play</string>
    <string name="editBtn">Edit</string>
    <string name="addMovieText">Add a Movie</string>
    <string name="selectPhoto">Select a Photo for the Movie</string>
    <string name="enterNewTitleText">Enter the Title of the Movie</string>
    <string name="enterMovieDescription">Enter Movie Description</string>
    <string name="addMovieBtn">Add Movie</string>
    <string name="descriptionHint">Enter your movie description for this crappy movie here…</string>
    <string name="titleHint">Enter movie title here…</string>

    <!-- string-array's to get the database set-up first run through -->
    <string-array name="moviefiles">
        <item>batmanandrobin</item>
        <item>moronmovies</item>
        <item>mybosssdaughter</item>
        <item>thirteenghosts</item>
    </string-array>
    <string-array name="picturefiles">
        <item>batmanpic</item>
        <item>moronpic</item>
        <item>mybosspic</item>
        <item>thirteenpic</item>
    </string-array>
    <string-array name="moviedescriptions">
        <item>Batman &amp; Robin try to keep their relationship together even as they must stop Mr. Freeze and Poison Ivy from freezing Gotham City.</item>
        <item>A collection of oddball "home movies".</item>
        <item>"When a young man agrees to housesit for his boss, he thinks it'll be the perfect opportunity to get close to the woman he desperately has a crush on - his boss's daughter. But he doesn't plan on the long line of other houseguests that try to keep him from his mission. And he also has to deal with the daughter's older brother, who's on the run from local drug dealers."</item>
    </string-array>
    <string-array name="movietitles">
        <item>"Batman &amp; Robin"</item>
        <item>"Moron Movies"</item>
        <item>"My Boss's Daughter"</item>
        <item>"Thirteen Ghosts"</item>
    </string-array>

    <string name="title_activity_add_movie">AddMovie</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="MoviePosterDescription">Movie Poster Description</string>
    <string name="title_activity_play_movie">PlayMovie</string>
    <string name="deleteButton">Delete</string>
    <string name="backBtn">Go Back</string>

</resources>
