<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathan.androidfinalprojectjonathanprince.AddMovie">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addMovieText"
        android:id="@+id/addMovieText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieSpinner"
        android:layout_below="@+id/addMovieText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selectPhoto"
        android:id="@+id/selectPhotoText"
        android:layout_below="@+id/movieSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pictureSpinner"
        android:layout_below="@+id/selectPhotoText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enterNewTitleText"
        android:id="@+id/newTitleText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movieTitleEdit"
        android:layout_below="@+id/newTitleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/newTitleText"
        android:layout_alignEnd="@+id/newTitleText"
        android:hint="@string/titleHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enterMovieDescription"
        android:id="@+id/enterMovieDescription"
        android:layout_below="@+id/movieTitleEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/movieDescriptionEdit"
        android:layout_below="@+id/enterMovieDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:lines="2"
        android:hint="@string/descriptionHint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addMovieBtn"
        android:id="@+id/addMovieBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:onClick="addMovieBtnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:id="@+id/delButton"
        android:layout_alignBottom="@+id/addMovieBtn"
        android:layout_toRightOf="@+id/addMovieText"
        android:layout_toEndOf="@+id/addMovieText"
        android:layout_marginLeft="58dp"
        android:onClick="delButtonOnClick" />


</RelativeLayout>
